--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,233 @@
-.App {
-  text-align: center;
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"); */
+@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+  min-height: 100%;
+  background: #1f1b24;
+  color: #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-size: 1.4rem;
+  text-rendering: optimizeLegibility;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body,
+ul,
+ol,
+dl {
+  margin: 0;
+}
+article,
+aside,
+audio,
+footer,
+header,
+nav,
+section,
+video {
+  display: block;
+}
+h1 {
+  font-size: 1.4rem;
+}
+p {
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+textarea {
+  resize: vertical;
+}
+table {
+  border-collapse: collapse;
+}
+td {
+  padding: 0.5rem;
+}
+img {
+  border: none;
+  max-width: 100%;
+}
+input[type="submit"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner {
+  border: 0px;
+}
+input[type="search"] {
+  -webkit-appearance: textfield;
+}
+input[type="submit"] {
+  -webkit-appearance: none;
+}
+input:required:after {
+  color: #f00;
+  content: " *";
+}
+input[type="email"]:invalid {
+  background: #f00;
+}
+.right {
+  float: right;
+  margin-left: 2rem;
+  clear: right;
+}
+.left {
+  float: left;
+  margin-right: 2rem;
+  clear: left;
+}
+sub,
+sup {
+  line-height: 0;
+}
+header svg.MuiSvgIcon-root {
+  fill: orange;
+}
+.ReactGridGallery_tile .ReactGridGallery_tile-viewport {
+  transition: all 0.3s;
+}
+.ReactGridGallery_tile .ReactGridGallery_tile-viewport img {
+  object-fit: cover;
+  margin-left: 0 !important;
+}
+.load-more-btn-container {
   display: flex;
-  flex-direction: column;
+  width: 100%;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.content-wrapper {
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.load-more-btn-container a {
+  margin: 30px 0;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.load-more-btn-container a {
+  min-width: 200px;
+  padding: 15px 30px;
+  position: relative;
+  display: block;
+  text-decoration: none;
+  overflow: hidden;
+}
+.load-more-btn-container a:hover .wave {
+  top: -120px;
+}
+.load-more-btn-container a span {
+  position: relative;
+  z-index: 1;
   color: white;
+  font-size: 15px;
+  letter-spacing: 8px;
+}
+.load-more-btn-container a .wave {
+  width: 100%;
+  height: 200px;
+  background-color: orange;
+  box-shadow: inset 0 0 50px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  top: -80px;
+  transition: 0.4s;
+}
+.load-more-btn-container a .wave::before,
+.load-more-btn-container a .wave::after {
+  width: 200%;
+  height: 200%;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -75%);
+}
+.load-more-btn-container a .wave::before {
+  border-radius: 45%;
+  background-color: #141414;
+  animation: wave 5s linear infinite;
+}
+.load-more-btn-container a .wave::after {
+  border-radius: 40%;
+  background-color: rgba(20, 20, 20, 0.5);
+  animation: wave 10s linear infinite;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes wave {
+  0% {
+    transform: translate(-50%, -75%) rotate(0deg);
+  }
+  100% {
+    transform: translate(-50%, -75%) rotate(360deg);
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form__group {
+  position: relative;
+  padding: 15px 0 0;
+  margin-top: 10px;
+  width: 50%;
+  margin: 15px auto;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: 0;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 1.3rem;
+  color: #fff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+.form__field::placeholder {
+  color: transparent;
+}
+.form__field:placeholder-shown ~ .form__label {
+  font-size: 1.3rem;
+  cursor: text;
+  top: 20px;
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #ffffff;
+}
+
+.form__field:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, #ffffff, #ffffff);
+  border-image-slice: 1;
+}
+.form__field:focus ~ .form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 1rem;
+  color: #11998e;
+  font-weight: 700;
+}
+
+/* reset input */
+.form__field:required,
+.form__field:invalid {
+  box-shadow: none;
 }
